automation-sandbox/src/app/landing/landing.component.css
body {
  color: #444;
}
#inner {
  padding: 1% 8% 8%;
  background: #f5f5f5;
  display: grid
}
.add-small-spacing {
  margin-bottom: 1%;
  padding-bottom: 1%;
}

/* //-- header -- */
#hd {
  padding: 2% 8%;
  background: #f5f5f5;
  display: grid
}
#hd h2 {
  text-transform: uppercase;
  letter-spacing: 2px;
}
#hd h3 {
  position: relative;
  width:33.3%;
}
#hd a {
  color: #035001
}

/* //-- footer -- */
footer {
  padding: 1% 0 5% 0;
  font-size: 92%;
  text-align: center;
  background-color: #333;
  color: #fff;
}
#ft a {
  color: #96e194
}

/* //-- core typography and style -- */
#hd h1 {
  font-size: 48px;
  text-transform: uppercase;
  letter-spacing: 3px;
}
h2 {
  font-size: 152%;
  padding: 1% 0 1% 0;
}
h3, h4 {
  font-size: 122%;
}
h1, h2, h3, h4 {
  color: #333;
  text-transform: uppercase;
}
p {
  font-size: 100%;
  line-height: 18px;
  padding-right: 3em;
}
a:hover {
  text-decoration: none;
}
strong {
  font-weight: bold;
}
p.enlarge {
  font-size: 144%;
  padding-right: 6.5em;
  line-height: 24px;
}

/* //-- section styles -- */
.download{
}
.job {
  position: relative;
  margin-bottom: 1em;
  padding-bottom: 1em;
}
.job h4 {
  position: absolute;
  top: 0.35em;
  right: 0;
  width:33.3%;
}
.job p {
  margin: 0.75em 0 3em 0;
}
.skills-list {
}
.skills-list ul {
  margin: 0;
}
.skills-list li {
  margin: 3px 0;
  padding: 3px 0;
}
.skills-list li span {
  font-size: 152%;
  display: block;
  margin-bottom: -2px;
  padding: 0
}
.talent-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.talent {
  flex: 0 0 calc(32% - 10px);
  margin: 5px;
  padding: 10px;
}
#srt-ttab {
  margin-bottom: 100px;
  text-align: center;
}
#srt-ttab img.last {
  margin-top: 20px
}

